Fixed bugs within repository
added nativequery = true and reformed package hierarchy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,13 @@ spring.datasource.username = root
 spring.datasource.password = 533486$33
 
 # none, create, create-drop, update
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+
+#Shows SQL queries in console
 spring.jpa.show-sql = true
 
+#Stops caching, helps during development
 spring.thymeleaf.cache = false
+
+#allows circular references prohibited since spring 2.6.0
+spring.main.allow-circular-references = true
