--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.thymeleaf.cache = false
 
 #allows circular references prohibited since spring 2.6.0
 spring.main.allow-circular-references = true
+
+logging.level.org.springframework.security=DEBUG
