Working on building resttemplate for Stock api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.url = jdbc:mysql://localhost:3306/portfolio_tracker
 spring.datasource.username = root
 spring.datasource.password = 533486$33
 
+# base url for stock data api
+stock.base.url = http://api.marketstack.com/v1/
+
+#api key for stock data api
+stock.api.key = 095fa051b1073a1278df254b88a49c99
+
 # none, create, create-drop, update
 spring.jpa.hibernate.ddl-auto = create
 
