changed api service reimplementing service class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.username = root
 spring.datasource.password = 533486$33
 
 # base url for stock data api
-stock.base.url = http://api.marketstack.com/v1/
+asset.base.url = https://www.alphavantage.co/query
 
 #api key for stock data api
-stock.api.key = 095fa051b1073a1278df254b88a49c99
+asset.api.key = LJJVVZZE9FN6PQ5I
 
 # none, create, create-drop, update
 spring.jpa.hibernate.ddl-auto = create
