working on dashboard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.thymeleaf.cache = false
 spring.main.allow-circular-references = true
 
 logging.level.org.springframework.security=DEBUG
+
+spring.cache.type=none
